básico función solo funciona con letras

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,16 @@
     <div id="root"></div>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
+    <div id="container" name="container"></div>
+    <form id="data">
+      <p>Texto a encriptar</p>
+      <input id="textOne" type="text">
+    <input id="offset" type="text"></br>
+    <input id="buttonEncrypt" type="button" value="ENCRIPTAR" onclick="encrypt()">
+
+    <p>Texto a desencriptar</p>
+      <input id="textTwo" type="text">
+      <input id="buttonDecrypt" type="button" value="DESENCRIPTAR" onclick="decrypt()">
+    </form>
   </body>
 </html>
