ahora sí re funciona sin estilo

--- a/src/index.html
+++ b/src/index.html
@@ -13,23 +13,23 @@
         <div id = "encrypt" class="contenedor">
               <form id="datos1" name="datos1">
                     <h2>Cadena original</h2>
-                    <textarea id="textOne" name="textOne" rows="10" cols="40" placeholder="Ingrese una cadena en mayúsculas"></textarea>
-                    <input id="boton3" class="borrar" type="button" value="Borrar cadena">
+                    <textarea id="textOne" name="textOne" rows="10" cols="40" placeholder="Ingrese texto"></textarea>
+                    <input id="clearOne" class="borrar" type="button" value="Borrar texto">
               </form>
         </div>
         <div id = "botones" class="botones">
               <form id="datos2" name="datos2">
                       <h2>Ingrese número de saltos</h2>
-                      <input id="numero1" name="numero1" type="number"  min="1" placeholder="offset" >
-                      <input id="boton1" class="boton" type="button" value="Encriptar">
-                      <input id="boton2" class="boton" type="button" value="Desencriptar">
+                      <input id="offset" name="offset" type="number"  min="1" placeholder="offset" >
+                      <input id="buttonEncrypt" class="boton" type="button" value="Encriptar">
+                      <input id="buttonDecrypt" class="boton" type="button" value="Desencriptar">
               </form>
         </div>      
         <div id = "decrypt" class="contenedor">
               <form id="datos2" name="datos2">
                      <h2>Cadena a descifrar</h2>
                     <textarea id="textTwo" name="textOne" rows="10" cols="40" placeholder="Ingrese una cadena en mayúsculas"></textarea>
-                    <input id="boton4" class="borrar" type="button" value="Borrar cadena">
+                    <input id="clearTwo" class="borrar" type="button" value="Borrar cadena">
               </form>
         </div>      
       </section>
