demo con  poco estilo explica offset

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
         </div>
         <div id = "offsetContainer" >
               <form id="dataOffset">
-                      <h2>Ingrese offset</h2>
+                      <h2>Ingrese offset </h2>
                       <input id="offset" type="number"  min="1" placeholder="offset" >
                       <input id="buttonEncrypt" type="button" value="Encriptar">
-
+                      <p>*offset:<br>espacios a desplazar <br>para encriptar<br>o desencriptar</p>
               </form>
         </div>      
         <div id = "decrypt" >
