paso test y funciona!

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Caesar Cipher</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale= 1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -20,7 +20,7 @@
           <option value="value1">DESENCRIPTAR</option>
           <option value="value2" selected>ENCRIPTAR</option>
         </select>
-        <input id="offset" type="number" min="1" max="100" step=1 placeholder="offset">
+        <input id="offset" type="number" min="1" max="100" step="1" placeholder="offset">
         <input id="buttonStart" type="button" value="->">
         <div id="space"></div>
         <textarea id="textOne" class="inputText" placeholder="Ingrese texto"></textarea>
