terminado sin he

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8">
   <title>Caesar Cipher</title>
   <meta name="viewport" content="width=device-width, initial-scale= 1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Montserrat|Open+Sans|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header>
-    <h1>CIFRADO CESAR</h1>
+    <h1 id="title">ENCRIPTA TU MENSAJE</h1>
 
   </header>
   <section id="principal">
@@ -42,6 +43,7 @@
   <script src="index.js"></script>
 </body>
 <footer>
+  <p>Creado por Andrea Monroy</p>
 </footer>
 
 </html>
