--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Caesar Cipher</title>
   <meta name="viewport" content="width=device-width, initial-scale= 1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Montserrat|Open+Sans|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Montserrat|Open+Sans|Raleway|Righteous" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 
