final con diseño sin he

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Caesar Cipher</title>
-  <meta name="viewport" content="width=device-width, initial-scale= 1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Montserrat|Open+Sans|Raleway|Righteous" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale= 1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Montserrat|Open+Sans|Raleway|Righteous" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header>
-    <h1 id="title">ENCRIPTA TU MENSAJE</h1>
+      <h1 id="title">ENCRIPTA TU MENSAJE</h1>
 
   </header>
   <section id="principal">
@@ -21,14 +21,10 @@
           <option value="value1">DESENCRIPTAR</option>
           <option value="value2" selected>ENCRIPTAR</option>
         </select>
-        <input id="offset" type="number" min="1" max="100" step="1" placeholder="offset">
+        <input id="offset" type="number" min="1" step="1" placeholder="offset">
         <input id="buttonStart" type="button" value="->">
         <div id="space"></div>
         <textarea id="textOne" class="inputText" placeholder="Ingrese texto"></textarea>
-      </form>
-    </div>
-    <div id="offsetContainer">
-      <form id="dataOffset">
       </form>
     </div>
     <div id="decrypt">
