--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         </select>
         <input id="offset" type="number" min="1" step="1" placeholder="offset">
         <input id="buttonStart" type="button" value="->">
+        <input id="buttonWithCipher" type="button" value="offset fijo">
         <div id="space"></div>
         <textarea id="textOne" class="inputText" placeholder="Ingrese texto"></textarea>
       </form>
