--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
 <body>
   <header>
       <h1 id="title">ENCRIPTA TU MENSAJE</h1>
-      <img id="wapp" src="labo.png"/>
   </header>
   <section id="container">
     <div id="encrypt">
@@ -31,6 +30,7 @@
         <textarea id="textTwo" readonly class="inputText" placeholder="Aquí verá el resultado"></textarea>
       </form>
       <input id="clear" type="button" class="button" value="Borrar">
+      <p id="offsetText">EL BOTÓN FIJO USA OFFSET 33<br>El offset es la cantidad de espacios que se desplazará cada letra :)</p>
     </div>
   </section>
   <script src="cipher.js"></script>
